feat: CIによる自動テストの追加とビルド成果物の検証強化
- pushおよびPR時にマルチプラットフォーム(Ubuntu, macOS, Windows)で動作するテストワークフローを追加
- リリースワークフローにビルド成果物の動作検証ステップを追加し、正常なバイナリのみ配布されるよう強化
- テストコードを bun:test に移行し、CI環境での安定性のために検証用画像をリモートURLへ変更
- install.ts および .gitignore の微細な整理

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,26 @@ jobs:
           cd mogu-ffi
           cargo build --release --target ${{ matrix.target }}
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Prepare for test (Unix)
+        if: runner.os != 'Windows'
+        run: |
+          mkdir -p bin
+          cp mogu-ffi/target/${{ matrix.target }}/release/${{ matrix.artifact_name }} bin/${{ matrix.artifact_name }}
+
+      - name: Prepare for test (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          if (!(Test-Path bin)) { New-Item -ItemType Directory -Path bin }
+          copy mogu-ffi\target\${{ matrix.target }}\release\${{ matrix.artifact_name }} bin\${{ matrix.artifact_name }}
+
+      - name: Run Tests
+        run: bun test
+
       - name: Rename Artifact (Unix)
         if: runner.os != 'Windows'
         run: |
